--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,8 +1,9 @@
 venv/ 
 env/ 
+logs/
+data/tests/*
 
 __pycache__/ 
-.env 
 **/__pycache__/
 
 *.pyc
@@ -12,5 +13,5 @@ __pycache__/
 .idea/
 
 *.log
-
+notes.md
 
