--- a/backend/.env_prod
+++ b/backend/.env_prod
@@ -1,11 +1,13 @@
-# openai or ollama
-LLM_PROVIDER=ollama
+# openai or anthropic or ollama
+LLM_PROVIDER=anthropic
 # with openai gpt-4-turbo is very good but expensive
-LLM_MODEL=mistral
+# with anthropic claude is very good but expensive
+LLM_MODEL=claude-3-5-sonnet-20240620
 DB_EGINE=postgres
 DATA_SCHEMA_CACHE=src/data/schema_cache.json
 
 OPENAI_API_KEY="your-key"
+ANTHROPIC_API_KEY="your-key"
 
 DB_POSTGRES_HOST=localhost
 DB_POSTGRES_PORT=5432
