Implementing add session

--- a/backend/.env_prod
+++ b/backend/.env_prod
@@ -1,9 +1,9 @@
 # openai or anthropic or ollama
-LLM_PROVIDER=anthropic
+LLM_PROVIDER=openai
 # with openai gpt-4-turbo is very good but expensive
-# with anthropic claude is very good but expensive
-LLM_MODEL=claude-3-5-sonnet-20240620
-DB_EGINE=postgres
+# with anthropic claude-3-5-sonnet-20240620 is very good but expensive
+LLM_MODEL=gpt-4o-mini
+DB_EGINE=PostgreSQL
 DATA_SCHEMA_CACHE=src/data/schema_cache.json
 
 OPENAI_API_KEY="your-key"
