--- a/backend/requirements_all.txt
+++ b/backend/requirements_all.txt
@@ -2,6 +2,7 @@ aiohappyeyeballs==2.5.0
 aiohttp==3.11.13
 aiosignal==1.3.2
 annotated-types==0.7.0
+anthropic==0.49.0
 anyio==4.8.0
 appdirs==1.4.4
 asgiref==3.8.1
@@ -66,11 +67,16 @@ jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 kubernetes==32.0.1
 langchain==0.3.20
+langchain-anthropic==0.3.9
 langchain-community==0.3.19
 langchain-core==0.3.41
 langchain-ollama==0.2.3
 langchain-openai==0.3.7
 langchain-text-splitters==0.3.6
+langgraph==0.3.5
+langgraph-checkpoint==2.0.18
+langgraph-prebuilt==0.1.2
+langgraph-sdk==0.1.55
 langsmith==0.3.11
 litellm==1.60.2
 markdown-it-py==3.0.0
@@ -81,6 +87,7 @@ mdurl==0.1.2
 mmh3==5.1.0
 monotonic==1.6
 mpmath==1.3.0
+msgpack==1.1.0
 multidict==6.1.0
 mypy-extensions==1.0.0
 networkx==3.4.2
@@ -146,6 +153,7 @@ shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.38
+sqlparse==0.5.3
 stack-data==0.6.3
 starlette==0.46.0
 sympy==1.13.3
