Development of api to access programs

--- a/backend/.env_example
+++ b/backend/.env_example
@@ -5,6 +5,8 @@ LLM_PROVIDER=openai
 LLM_MODEL=gpt-4o-mini
 DB_EGINE=PostgreSQL
 DATA_SCHEMA_CACHE=src/data/schema_cache.json
+DATA_FILE_EXPORT_PATH=data/export
+MAX_ROWS_TO_LLM=50
 
 OPENAI_API_KEY="your-key"
 ANTHROPIC_API_KEY="your-key"
@@ -15,4 +17,7 @@ DB_POSTGRES_NAME=base_analyst_llm
 DB_POSTGRES_USER=postgres
 DB_POSTGRES_PASSWORD=postgres
 DB_POSTGRES_DEFAULT_SCHEMA=public
+
+API_HOST="0.0.0.0"
+API_PORT=7575
 
