--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,8 +1,11 @@
 venv/ 
 env/ 
+logs/
+data/tests/*
+data/export/*
+data/schema/*
 
 __pycache__/ 
-.env 
 **/__pycache__/
 
 *.pyc
@@ -12,5 +15,5 @@ __pycache__/
 .idea/
 
 *.log
-
+.env
 
