--- a/backend/.env_example
+++ b/backend/.env_example
@@ -1,11 +1,9 @@
 API_NAME=Analyst-Assistant
 API_VERSION=1.0.0
-API_DESCRIPTION="Assistant that uses LLMs to provide information from the database"
+API_DESCRIPTION="Assistant that uses LLMs to provide information from the database."
 
-# openai or anthropic or ollama
+# openai or ollama (need good model and good cpu), anthropic (comming soon)
 LLM_PROVIDER=openai
-# with openai gpt-4-turbo is very good but expensive
-# with anthropic claude-3-5-sonnet-20240620 is very good but expensive
 LLM_MODEL=gpt-4o-mini
 
 DB_EGINE=PostgreSQL
@@ -13,10 +11,10 @@ DB_CONTENT="GTFS Data (Public Transport) from the city of Paris"
 
 DATA_SCHEMA_CACHE=data/schema/schema_cache.json
 DATA_FILE_EXPORT_PATH=data/export
-MAX_ROWS_TO_LLM=50
+MAX_ROWS_TO_LLM=100
 
 OPENAI_API_KEY="your-openai-api-key"
-ANTHROPIC_API_KEY="your-anthropic-api-key"
+ANTHROPIC_API_KEY="your-openai-api-key"
 
 DB_POSTGRES_HOST=localhost
 DB_POSTGRES_PORT=5432
