--- a/front/chatbot-app/package.json
+++ b/front/chatbot-app/package.json
@@ -17,8 +17,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.6.1",
+    "sql-formatter": "^15.4.11",
     "styled-components": "^6.1.15",
     "typescript": "^4.9.5",
     "uuid": "^11.1.0",
